examples/errors/syntax05.cpp
int main()
{
    char* s="Unfinished string
    return 0;
}

